[package]
name = "blitz"
version = "0.1.0"
authors = ["Fabian Tamp <fabian.tamp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
libraw = {path = "../libraw" }
image = "0.22.4"
chrono = "0.4.10"
git2 = "0.11.0"
ndarray = "0.13.0"
itertools = "0.8.2"
