[package]
name = "blitz"
version = "0.1.0"
authors = ["Fabian Tamp <fabian.tamp@gmail.com>"]
edition = "2018"

[dependencies]
libraw = {path = "../libraw" }
image = "0.23.1"
ndarray = "0.13.0"
itertools = "0.8.2"
nalgebra = "0.19.0"
palette = "0.5.0"
rayon = "1.3.0"
num-traits = "0.2.11"
ordered-float = "1.0.2"
