[package]
name = "blitzbin"
version = "0.1.0"
authors = ["Fabian Tamp <fabian.tamp@gmail.com>"]
edition = "2018"
default-run = "blitz"

[dependencies]
clap = "2.33.0"
libraw = {path = "../libraw" }
blitz = {path = "../blitz" }
image = "0.23.1"
chrono = "0.4.10"
git2 = "0.11.0"
ndarray = "0.13.0"
itertools = "0.8.2"
ordered-float = "1.0.2"
directories = "2.0.2"
memmap = "0.7.0"
hex = "0.4.2"
nalgebra = "0.19.0"
histogram = "0.6.9"
iterm2 = "0.2.1"
svg = "0.7.1"
resvg = {version = "0.9.0",  features = ["cairo-backend"] }
cairo-rs = "0.8.1"
palette = "0.5.0"
rayon = "1.3.0"
num-traits = "0.2.11"


[[bin]]
name = "tiffheaderdump"
path = "src/bin/tiffheaderdump.rs"

[[bin]]
name = "blitz"
path = "src/bin/blitz.rs"
