[package]
name = "libraw"
version = "0.1.0"
authors = ["Fabian Tamp <fabian.tamp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libraw-sys = { path = "../libraw-sys" }
quick-error = "1.2.3"
nom = "5.1.0"
memmap = "0.7.0"
data-encoding-macro = "0.1.7"
tristate = "0.1.1"
byteorder = "1.3.2"
itertools = "0.8.2"
derivative = "1.0.3"
bitbit = "0.2.0"

[dev-dependencies]
test-case = "1.0.0"
byteorder = "1.3.4"
