[package]
name = "squashraf"
version = "0.1.0"
authors = ["Fabian Tamp <fabian.tamp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
libraw = {path = "../libraw" }
image = "0.22.4"
chrono = "0.4.10"
git2 = "0.11.0"
ndarray = "0.13.0"
itertools = "0.8.2"
num-integer = "0.1.42"
ordered-float = "1.0.2"
num-traits = "0.2.11"
directories = "2.0.2"
bitbit = "0.2.0"
